--- a/client/src/assets/i18n/it.po
+++ b/client/src/assets/i18n/it.po
@@ -2,10 +2,11 @@
 # Translators:
 # Alexandra Damm <damm@chiesaluterana.it>, 2021
 # Katharina <karmitt2@web.de>, 2021
+# Emanuel Schütze <emanuel.schuetze@intevation.de>, 2021
 # 
 msgid ""
 msgstr ""
-"Last-Translator: Katharina <karmitt2@web.de>, 2021\n"
+"Last-Translator: Emanuel Schütze <emanuel.schuetze@intevation.de>, 2021\n"
 "Language-Team: Italian (https://www.transifex.com/openslides/teams/14270/it/)\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,7 +14,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "mime-version: 1.0\n"
 
-msgid "%num% emails were send sucessfully."
+msgid "%num% emails were sent successfully."
 msgstr "%ne-mails inviati con successo."
 
 msgid "100% base"
@@ -152,6 +153,9 @@ msgstr "Administratore"
 msgid "After verifiy the preview click on \"import\" please (see top right)."
 msgstr "Dopo controllo cliccare su \"Importare\" (in alto a destra).  "
 
+msgid "After verifying the preview click on \"import\" please (see top right)."
+msgstr ""
+
 msgid "Agenda"
 msgstr "Ordine del Giorno"
 
@@ -242,7 +246,7 @@ msgstr ""
 "Una mozione di modifica riguarda probabilmente ad un numero di righe non "
 "esistente."
 
-msgid "An email with a password reset link was send!"
+msgid "An email with a password reset link was sent!"
 msgstr "E' stato inviato un'e-mail con il link per resettare la password!"
 
 msgid "An error happened"
@@ -1300,6 +1304,9 @@ msgstr "Esportare elezioni selezionate"
 msgid "Export selected motions"
 msgstr "Esportasre mozioni selezionate"
 
+msgid "Export to OpenSlides4"
+msgstr ""
+
 msgid "Extension"
 msgstr "Estensione"
 
@@ -1945,7 +1952,7 @@ msgstr "Nessuna delega del diritto di voto"
 msgid "No email sent"
 msgstr "Nessuna e-mail inviata"
 
-msgid "No emails were send."
+msgid "No emails were sent."
 msgstr "Nessune e-mail inviate"
 
 msgid "No encryption"
@@ -2085,7 +2092,7 @@ msgstr "Modus offline"
 msgid "Old password"
 msgstr "Vecchia password"
 
-msgid "One email was send sucessfully."
+msgid "One email was sent successfully."
 msgstr "Una e-mail è stata spedita con successo."
 
 msgid ""
@@ -2787,11 +2794,9 @@ msgstr ""
 " prove tecniche audio/video."
 
 msgid ""
-"Shows if livestream is not started. Recommended image format: 500x200px, PNG"
+"Shows if livestream is not started. Recommended image format: 500x280px, PNG"
 " or JPG"
 msgstr ""
-"Visualizzare se livestream non è partito. Raccomandato image format: "
-"500x200px, PNG or JPG"
 
 msgid ""
 "Shows the given image as applause particle. Recommended image format: "
