--- a/client/src/assets/i18n/template-en.pot
+++ b/client/src/assets/i18n/template-en.pot
@@ -4,7 +4,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "%num% emails were send sucessfully."
+msgid "%num% emails were sent successfully."
 msgstr ""
 
 msgid "100% base"
@@ -134,6 +134,9 @@ msgstr ""
 msgid "After verifiy the preview click on \"import\" please (see top right)."
 msgstr ""
 
+msgid "After verifying the preview click on \"import\" please (see top right)."
+msgstr ""
+
 msgid "Agenda"
 msgstr ""
 
@@ -220,7 +223,7 @@ msgstr ""
 msgid "An amendment is probably referring to a non-existant line number."
 msgstr ""
 
-msgid "An email with a password reset link was send!"
+msgid "An email with a password reset link was sent!"
 msgstr ""
 
 msgid "An error happened"
@@ -1224,6 +1227,9 @@ msgstr ""
 msgid "Export selected motions"
 msgstr ""
 
+msgid "Export to OpenSlides4"
+msgstr ""
+
 msgid "Extension"
 msgstr ""
 
@@ -1858,7 +1864,7 @@ msgstr ""
 msgid "No email sent"
 msgstr ""
 
-msgid "No emails were send."
+msgid "No emails were sent."
 msgstr ""
 
 msgid "No encryption"
@@ -1992,7 +1998,7 @@ msgstr ""
 msgid "Old password"
 msgstr ""
 
-msgid "One email was send sucessfully."
+msgid "One email was sent successfully."
 msgstr ""
 
 msgid ""
