--- a/AUTHORS
+++ b/AUTHORS
@@ -30,4 +30,9 @@ Authors of OpenSlides in chronological order of first contribution:
     Jochen Saalfeld <jochen.saalfeld@intevation.de>
     Fadi Abbud <fmfn13@hotmail.com>
     Gabriel Meyer <meyergabriel@live.de>
+    Gernot Schulz <gernot@intevation.de>
     Joshua Sangmeister <joshua.sangmeister@gmail.com>
+    Ralf Peschke <rpeschke@peschke-it.de>
+    Ludwig Reiter <ludwig.reiter@intevation.de>
+    Adrian Richter <adrian@intevation.de>
+    Camille Akmut
