Updated services and AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Ludwig Reiter <ludwig.reiter@intevation.de>
     Adrian Richter <adrian@intevation.de>
     Camille Akmut
+    Johannes Rolf <johannes.rolf@rwth-aachen.de>
