--- a/AUTHORS
+++ b/AUTHORS
@@ -32,8 +32,14 @@ Authors of OpenSlides in chronological order of first contribution:
     Gabriel Meyer <meyergabriel@live.de>
     Gernot Schulz <gernot@intevation.de>
     Joshua Sangmeister <joshua.sangmeister@gmail.com>
-    Ralf Peschke <rpeschke@peschke-it.de>
     Ludwig Reiter <ludwig.reiter@intevation.de>
+    Raphael Topel <info@rtopel.de>
+    Ralf Peschke <rpeschke@peschke-it.de>
+    Martin Dickopp <martin@zero-based.org>
     Adrian Richter <adrian@intevation.de>
     Camille Akmut
     Johannes Rolf <johannes.rolf@rwth-aachen.de>
+    Luisa Beerboom <luisa.beerboom@intevation.de
+    Magnus Schieder
+    Bastian Rihm <brihm@intevation.de>
+    Abdullah Şevik <a.alveolus@icloud.com>
