Update docs & translations

--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -353,6 +353,9 @@ msgstr ""
 msgid "Are you sure you want to delete all selected files and folders?"
 msgstr ""
 
+msgid "Are you sure you want to delete all selected meetings?"
+msgstr ""
+
 msgid "Are you sure you want to delete all selected motions?"
 msgstr ""
 
@@ -957,6 +960,9 @@ msgstr ""
 msgid "Confirm new password"
 msgstr ""
 
+msgid "Confirmation of the nomination list"
+msgstr ""
+
 msgid "Congratuations! Your browser is supported by OpenSlides."
 msgstr ""
 
@@ -1075,6 +1081,9 @@ msgid "Customize design"
 msgstr ""
 
 msgid "Dark mode"
+msgstr ""
+
+msgid "Dashboard"
 msgstr ""
 
 msgid "Datastore is corrupt! See the console for errors."
@@ -1266,6 +1275,9 @@ msgstr ""
 msgid "Duplicate from"
 msgstr ""
 
+msgid "Duplicates"
+msgstr ""
+
 msgid "Duration"
 msgstr ""
 
@@ -1302,6 +1314,9 @@ msgid "Edit editorial final version"
 msgstr ""
 
 msgid "Edit meeting"
+msgstr ""
+
+msgid "Edit name"
 msgstr ""
 
 msgid "Edit projector"
@@ -1852,6 +1867,9 @@ msgstr ""
 msgid "Is a natural person"
 msgstr ""
 
+msgid "Is a template"
+msgstr ""
+
 msgid "Is active"
 msgstr ""
 
@@ -1859,6 +1877,9 @@ msgid "Is already projected"
 msgstr ""
 
 msgid "Is amendment"
+msgstr ""
+
+msgid "Is archived"
 msgstr ""
 
 msgid "Is being projected"
@@ -1891,7 +1912,13 @@ msgstr ""
 msgid "Is not a committee"
 msgstr ""
 
+msgid "Is not a template"
+msgstr ""
+
 msgid "Is not active"
+msgstr ""
+
+msgid "Is not archived"
 msgstr ""
 
 msgid "Is not favorite"
@@ -2446,6 +2473,9 @@ msgstr ""
 msgid "No."
 msgstr ""
 
+msgid "Nomination list"
+msgstr ""
+
 msgid "None"
 msgstr ""
 
@@ -2494,7 +2524,13 @@ msgstr ""
 msgid "Number of last speakers to be shown on the projector"
 msgstr ""
 
+msgid "Number of motions"
+msgstr ""
+
 msgid "Number of next speakers automatically connecting to the live conference"
+msgstr ""
+
+msgid "Number of participants"
 msgstr ""
 
 msgid "Number of persons to be elected"
@@ -2784,6 +2820,9 @@ msgstr ""
 msgid "Please enter a name for the new workflow:"
 msgstr ""
 
+msgid "Please enter a new workflow name:"
+msgstr ""
+
 msgid "Please enter a valid email address"
 msgstr ""
 
@@ -3019,6 +3058,9 @@ msgstr ""
 msgid "Remove option"
 msgstr ""
 
+msgid "Rename state"
+msgstr ""
+
 msgid "Reopen"
 msgstr ""
 
@@ -3087,10 +3129,19 @@ msgstr ""
 msgid "Results"
 msgstr ""
 
+msgid "Retrieving vote status... Please wait!"
+msgstr ""
+
 msgid "Right"
 msgstr ""
 
 msgid "Roman"
+msgstr ""
+
+msgid "Same email"
+msgstr ""
+
+msgid "Same first/last name"
 msgstr ""
 
 msgid "Save"
@@ -3730,13 +3781,13 @@ msgstr ""
 msgid "This meeting is archived"
 msgstr ""
 
-msgid "This number already exists"
-msgstr ""
-
 msgid "This paragraph does not exist in the main motion anymore:"
 msgstr ""
 
 msgid "This prefix already exists"
+msgstr ""
+
+msgid "This prefix already exists."
 msgstr ""
 
 msgid "This prefix will be set if you run the automatic agenda numbering."
@@ -3793,6 +3844,9 @@ msgid "Thoroughly check datastore (unsafe)"
 msgstr ""
 
 msgid "Tile view"
+msgstr ""
+
+msgid "Time"
 msgstr ""
 
 msgid "Timestamp"
@@ -4084,6 +4138,9 @@ msgstr ""
 msgid "Yes/No/Abstain per candidate"
 msgstr ""
 
+msgid "Yes/No/Abstain per list"
+msgstr ""
+
 msgid "You are not allowed to see all entitled users."
 msgstr ""
 
@@ -4256,6 +4313,9 @@ msgid "add group(s)"
 msgstr ""
 
 msgid "adjourned"
+msgstr ""
+
+msgid "already exists"
 msgstr ""
 
 msgid "analog"
