--- a/AUTHORS
+++ b/AUTHORS
@@ -43,3 +43,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Magnus Schieder
     Bastian Rihm <brihm@intevation.de>
     Abdullah Şevik <a.alveolus@icloud.com>
+    Loki Elble <lelble@intevation.de>
